--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dsquare-gbu/vue-utils",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "To support Vue application",
   "main": "dist/index.js",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git-gbu.japaneast.cloudapp.azure.com:gbu/vue-utils.git"
+    "url": "git@git-gbu.japaneast.cloudapp.azure.com:base/vue-utils.git"
   },
   "keywords": [
     "vue",
@@ -28,10 +28,12 @@
     "@babel/register": "^7.10.4",
     "chai": "^4.2.0",
     "coveralls": "^3.1.0",
-    "crypto-js": "^4.0.0",
-    "jquery": "^3.5.1",
-    "js-cookie": "^2.2.1",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0"
+  },
+  "dependencies": {
+    "crypto-js": "^4.0.0",
+    "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1"
   }
 }
