--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@dsquare-gbu/vue-utils",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "description": "To support Vue application",
     "main": "dist/index.js",
     "scripts": {
@@ -33,6 +33,7 @@
     },
     "dependencies": {
         "crypto-js": "^4.0.0",
+        "ipaddr.js": "^1.9.1",
         "jquery": "^3.5.1",
         "js-cookie": "^2.2.1"
     }
