--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dsquare-gbu/vue-utils",
+    "name": "@linhntaim/vue-utils",
     "version": "1.0.30",
     "description": "To support Vue application",
     "main": "dist/index.js",
@@ -10,7 +10,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git@git-gbu.japaneast.cloudapp.azure.com:base/vue-utils.git"
+        "url": "https://github.com/linhntaim/vue-utils.git"
     },
     "keywords": [
         "vue",
@@ -19,7 +19,7 @@
         "application",
         "utils"
     ],
-    "author": "Nguyen Tuan Linh <tuanlinh.nguyen@dsquare.com.vn>",
+    "author": "Nguyen Tuan Linh <contact@linhntaim.com> (https://linhntaim.com)",
     "license": "MIT",
     "devDependencies": {
         "@babel/cli": "^7.10.5",
